# crovia-core-engine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGGIMI.md  LICENSE  MIRROR_TEST.md  NOTICE  README.md  SECURITY.md  app.py  check_floors_vs_payouts.py  compliance_ai_act.py  crovia_app.py  crovia_floor.py  crovia_trust.py  crovia_validate.py  csv_to_royalty.py  dpi_to_royalty.py  events_to_royalty.py  generate_receipts.py  generate_synthetic_receipts.py  hashchain_writer.py  make_payout_charts.py  payouts_from_royalties.py  pull_request_template.md  pyproject.toml  qa_receipts.py  qa_receipts.py.bak_20251204_1710  requirements.txt  run_period.py  schema.py  trust_bundle_validator.py  verify_hashchain.py
bindings/: bind_identity_to_cep.py  identity_binding.v1.json
cli/: pack.py  verify.py
core/: crovia_floor.py  crovia_trust.py  crovia_validate.py  csv_to_royalty.py  dpi_to_royalty.py  events_to_royalty.py  hashchain_writer.py  make_payout_charts.py  ndjson_io.py  payouts_from_royalties.py  run_period.py  schema.py  trust_bundle_validator.py  verify_hashchain.py
crovia/: __init__.py  auth.py  bridge_preview.py  c_line.py  cli.py  id.py  oracle.py  qr.py  run.py  verify.py
crovia-automation/: build_github_targets.py  build_github_targets_from_tpa.py  canonical_diff_public.py  compliance_report_generator.py  cpp_builder.py  dataset_sample_10.json  dataset_targets_generated.json  discover_targets.py  discussion_sender.py  enhancement_tracker.py  export_db_to_jsonl.sh  export_ddf_to_hf.py  export_observations_to_hf.py  export_tpa_latest.py  fetch_top_targets.py  forensic_correlator.py  generate_dataset_targets.py  generate_disclosure_index.py  generate_disclosure_report.py  generate_global_ranking.py  generate_target_list.py  generate_targets_balanced.py  generate_warranty_packs.py  github_issue_sender.py  github_issues_sent.jsonl  hf_scraper.py  lineage_builder.py  model_card_analyzer.py  model_card_enhancement.py  model_sonar.py  multi_source_fetcher.py  multi_source_targets.jsonl  observation_daily.sh  outreach_data_bridge.py  outreach_status_overrides.jsonl  pipeline_health_aggregate.py  rebuild_search_targets.py  run_forensics.py  run_outreach.sh  schema_validate_public.py  (+14 more)
crovia_core_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: AI_ACT_gaps_2025-11.ndjson  AI_ACT_pack_2025-11.json  assumptions_2025-11.json  compliance_pack.json  floors_2025-11.json  laion_test.parquet  laion_test_preview.json  payouts_2025-11.csv  payouts_2025-11.ndjson  receipts_laion_cli.ndjson  receipts_laion_test.ndjson  royalty_from_faiss.ndjson  spider_gsm8k_main_report.json  test_receipts.ndjson  trust_providers.csv
docs/: AI_ACT_training_data_summary_2025-11.md  CROVIAN_TRUST_SCORE.md  CROVIA_AI_Training_Data_Trust_Profile_v1.0.md  CROVIA_ARTIFACT_SPEC.md  CROVIA_AUTOLOG.md  CROVIA_CCL_v1.1.md  CROVIA_CEP_v1.md  CROVIA_DEMO_CLI_2025-11.md  CROVIA_DSSE_v1.md  CROVIA_EDITIONS_AND_LICENSE.md  CROVIA_FAISS_DEMO.md  CROVIA_FLOOR_STANDARD_v1.1.md  CROVIA_LITE_TOOLS_M1.md  CROVIA_OPEN_CORE_FAISS_2025-11_OVERVIEW.md  CROVIA_OVERVIEW.md  CROVIA_PROFILE_M0.md  CROVIA_SANDBOX_GUIDE.md  CROVIA_SPIDER_RECEIPT_v1.md  CROVIA_TRUST_BUNDLE_v1.md  CROVIA_WEB_OVERVIEW_v1.md  CROVIA_WEB_SANDBOX_v1.md  CROVIA_WEB_TRUST_PAYOUT_2025-11.md  DPI_AI_ACT_2025-11.md  DPI_TRUST_2025-11.md  DPI_VALIDATE.md  OPEN_CORE_BOUNDARY.md  QUICKSTART_PROOF.md  README_PAYOUT_2025-11.md  README_SPIDER_GSM8K_2025-12.md  VALIDATE_royalty_from_faiss.md  trust_summary.md
identity/: crovia_identity.py  crovia_identity.v1.json
model_side/: build_faiss_index.py  cim_calibrate.py  cim_estimator.py  crovia_sign.py  faiss_attributor_sim.py  qa_receipts.py  shard_sketch_gen.py  sign_receipts_hmac.py
pack/: README.md  manifest.schema.json
payouts/: build.py
tools/: c_line.py  (+11 more)
(+353 files in other folders)
